--- a/src/App.css
+++ b/src/App.css
@@ -256,3 +256,23 @@
   outline:none;
   box-shadow :none;
 }
+
+.ColorBox {
+  position: absolute;
+  max-width: 126px;
+  /* margin-left: 26.5%;
+  margin-top: -4%; */
+  padding: 3px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  z-index: 2;
+  transition: 5s;
+  margin-top:20px;
+}
+#ToolButton {
+  margin:0 8px;
+  cursor: pointer;
+  opacity: .71; 
+  
+}
