--- a/src/App.css
+++ b/src/App.css
@@ -268,7 +268,7 @@
   flex-wrap: wrap;
   z-index: 2;
   transition: 5s;
-  margin-top:20px;
+  margin-top:-13px;
 }
 #ToolButton {
   margin:0 8px;
@@ -276,3 +276,21 @@
   opacity: .71; 
   
 }
+.CardsView {
+  width: 700px;
+  margin-top: 25px;
+  text-align: left;
+  padding: 15px;
+  border: 1px solid #dadce0;
+  border-radius: 10px;
+  justify-content: space-between;
+  }
+  
+  #gap {
+  display: flex;
+  margin-left: 12%;
+  }
+  .cardTools{
+  margin-top: 4%;
+  
+  }
