--- a/src/App.css
+++ b/src/App.css
@@ -258,17 +258,7 @@
 }
 
 .ColorBox {
-  position: absolute;
-  max-width: 126px;
-  /* margin-left: 26.5%;
-  margin-top: -4%; */
-  padding: 3px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  z-index: 2;
-  transition: 5s;
-  margin-top:-13px;
+width:fit-content;
 }
 #ToolButton {
   margin:0 8px;
@@ -292,5 +282,21 @@
   }
   .cardTools{
   margin-top: 4%;
+  display: flex;
+  /* opacity: .71;  */
   
+  }
+
+  .colorPalleteCard{
+    position: absolute;
+    max-width: 126px;
+    /* margin-left: 26.5%;
+    margin-top: -4%; */
+    padding: 3px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    z-index: 2;
+    transition: 5s;
+    overflow: auto;
   }
