--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,7 @@
 #typo {
   opacity: 0.7;
   font-weight: 300;
+  width: 100px;
 }
 
 /*********************** Css for Reset page ******************************/
@@ -393,11 +394,18 @@
   float: right;
   margin-top: -5%;
 }
+/***************** REMINDER NAVIGATOR CSS *****************/
+
 
 /***************** ARCHIVE NAVIGATOR CSS ******************/
-
+.archive_cardview{
+  margin-top:110px;
+}
 /**************** TRASH NAVIGATOR CSS ********************/
 
+.trash_cardview{
+  margin-top:110px;
+}
 .TrashNavi1 {
   margin-top: 20px;
   margin-left: -120px;
@@ -407,6 +415,135 @@
   margin-top: 20px;
   margin-left: -120px;
 }
+/*************** Label *******************/
+.cardToolsClose {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5.5%
+}
+
+.cardToolsDialog {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5.5%
+}
+
+.cardTools {
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* 
+.listCards:hover .cardTools {
+  visibility: visible
+} */
+
+
+.listCards .cardTools {
+  visibility: visible
+}
+
+.pinIcon {
+  visibility: hidden;
+}
+
+/* 
+.listCards:hover .pinIcon {
+  visibility: visible
+} */
+
+#createNotetools {
+  display: flex;
+  flex-direction: row
+}
+
+.createNotePinIcon {
+  display: flex;
+  flex-direction: row;
+  margin-top: 0%
+}
+
+div .listRemindr {
+  padding-left: 15px
+}
+
+div .currentDate {
+  display: flex;
+  justify-content: space-between;
+}
+
+.pickDateTime {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.moreOptionsPopper {
+  margin-top: -95px;
+  z-index: -1
+}
+
+.addDrawingOptions {
+  margin-left: -8px;
+  font-family: arial;
+  font-size: 15px;
+  color: gray
+}
+
+#moreOptionsMenu {
+  font-family: arial;
+  font-size: 15px;
+  height: 5%;
+}
+
+#editLabelTextField {
+  font-family: 'Roboto', arial, sans-serif;
+  font-size: 14px;
+  font-weight: 550;
+  width: 182px;
+  height: 45px;
+  color: black;
+  padding-bottom: 0px;
+  padding-top: 0px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.editCloseButton {
+  margin-left: 195px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.editTitleInput {
+  width: 550px;
+}
+
+.editNote {
+  width: 550px;
+}
+
+.editDialog {
+  display: flex;
+  flex-direction: row;
+}
+
+#doneButton {
+  margin-left: 300px
+}
+
+#appBarIcons {
+  display: flex;
+  line-height: 3
+}
+
+#appBarMenu {
+  display: flex;
+  line-height: 3;
+  color: gray
+}
+
 /***************** MEDIA QUERY for MOBILE ****************/
 @media screen and (max-width: 425px) {
   /* body{
@@ -524,3 +661,19 @@
     margin-left: 0px;
   }
 }
+
+
+/********************** MEDIA QUERY FOR LAPTOP **********************/
+
+
+/************* Empty contents *************/
+.NoteDiv{
+ margin-left: 30%;
+ margin-top: 10%;
+}
+#blurimage3{
+  width:120px;
+  opacity: .20;
+}
+
+
